all download btns have same style, but style should be fixed later! disabled btn text color changed to improve visibility

--- a/TranslationReg/Style/style.less
+++ b/TranslationReg/Style/style.less
@@ -387,7 +387,7 @@ footer {
 .disabled-btn {
     background: lightgrey;
     border-color: grey;
-    color: white;
+    color: black;
 }
 
 .filters {
